# ice-g2p

./: .gitignore  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
data/: vowels_ipa.txt
dictionaries/: ice_pron_dict_standard_clear.csv
fairseq_models/standard/: dict.standard_clear.phonemes.txt
src/: dictionaries.py  g2p_lstm.py  main.py  syllab_stress_processing.py  syllabification.py  syllable.py
src/ice_g2p/: compound_analysis.py  converter.py  dictionaries.py  entry.py  fetch_models.py  g2p_lstm.py  main.py  stress.py  syllab_stress_processing.py  syllabification.py  syllable.py  transcriber.py  tree_builder.py  trigrams.py
src/ice_g2p/data/: cons_clusters_ipa.txt  cons_clusters_sampa.txt  head_map.csv  modifier_map.csv  sampa_ipa_single_flite.tsv
src/ice_g2p/dictionaries/: ice_pron_dict_english_clear.csv  ice_pron_dict_north_clear.csv  ice_pron_dict_standard_clear.csv
src/ice_g2p/fairseq_models/english/: dict.english.phonemes.txt  model-256-.3-s-s.pt
src/ice_g2p/fairseq_models/north/: dict.north_clear.graphemes.txt  dict.north_clear.phonemes.txt  model-256-.3-s-s.pt
src/ice_g2p/fairseq_models/standard/: model-256-.3-s-s.pt
src/ice_g2p/resources/data/: vowels_sampa.txt
src/ice_g2p/resources/fairseq_models/english/: dict.english.graphemes.txt
test/: compound_test.py  g2p_lstm_test.py
