[metadata]
name = ice_g2p
version = 0.0.1
author = Anna Björk Nikulásdóttir
author_email = author@example.com
description = A minimal g2p module for Icelandic
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/grammatek/ice-g2p
project_urls =
    Bug Tracker = https://github.com/grammatek/ice-g2p/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Apache 2.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
[options.data_files]
data:
    data/cons_clusters_ipa.txt
    data/cons_clusters_sampa.txt
    data/head_map.csv
    data/modifier_map.csv
    data/vowels_ipa.txt
    data/vowels_sampa.txt
dictionaries:
    dictionaries/ice_pron_dict_standard_clear.csv
models:
    fairseq_models/standard/dict.standard_clear.graphemes.txt
    fairseq_models/standard/dict.standard_clear.phonemes.txt
    fairseq_models/standard/model-256-.3-s-s.pt
[options.packages.find]
where = src