[metadata]
name = ice_g2p
version = 0.0.1
author = Anna Björk Nikulásdóttir
author_email = anna@grammatek.com
description = A minimal g2p module for Icelandic
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/grammatek/ice-g2p
project_urls =
    Bug Tracker = https://github.com/grammatek/ice-g2p/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Apache 2.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    setuptools
    importlib_resources
    torch>=1.10
    fairseq>=0.10
    nltk>=3.6
include_package_data=True
[options.packages.find]
where = src
[options.entry_points]
console_scripts =
    ice-g2p = ice_g2p.main:main
