[metadata]
name = ice_g2p
version = 1.0.4
author = Anna Björk Nikulásdóttir
author_email = anna@grammatek.com
description = A grapheme-to-phoneme (g2p) converter for Icelandic
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/grammatek/ice-g2p
project_urls =
    Bug Tracker = https://github.com/grammatek/ice-g2p/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Topic :: Text Processing :: Linguistic
    Natural Language :: Icelandic

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    setuptools
    importlib_resources
    torch>=1.10
    fairseq>=0.10
    nltk>=3.6
include_package_data=True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ice-g2p = ice_g2p.main:main
    fetch-models = ice_g2p.fetch_models:main
